--- a/ref.bib
+++ b/ref.bib
@@ -1,3 +1,17 @@
+@article{braden1997resource,
+  title={Resource ReSerVation Protocol:(RSVP); Version 1 Functional Specification},
+  author={Braden, Robert and Zhang, Lixia and Berson, Steve and Herzog, Shai and Jamin, Sugih},
+  year={1997},
+  publisher={University of Michigan}
+}
+
+@misc{wroclawski1997use,
+  title={The use of RSVP with IETF integrated services},
+  author={Wroclawski, John and others},
+  year={1997},
+  publisher={RFC 2210, september}
+}
+
 @inproceedings{pantheon,
   title="{Pantheon: The Training Ground for Internet Congestion-Control research}",
   author="Yan, Francis Y and Ma, Jestin and Hill, Greg and Raghavan, Deepti and Wahby, Riad S and Levis, Philip and Winstein, Keith",
@@ -1634,13 +1648,6 @@ author = {{Chelsio Communications}},
  month = feb,
 }
 
-@inproceedings{nimbus,
- author = "{{Anonymous Reference 1}}",
- title = "{Details omitted for double-blind review.}",
- booktitle = {NSDI},
- year = {2020},
-}
-
 @misc{tcpbpf,
 author = {Brakmo, Lawrence},
 title = {{TCP-BPF: Programmatically tuning TCP behavior through BPF}},
@@ -1801,4 +1808,25 @@ year = {2016},
     title = {{ISP Bandwidth Throttling Explained}},
     howpublished = {\url{https://www.purevpn.com/blog/isp-bandwidth-throttling-explained/}},
     year = {2017}
+}
+
+@inproceedings{ardelean,
+  title={{Remote Active Queue Management}},
+  author={Ardelean, Dan and Blanton, Ethan and Martynov, Maxim},
+  booktitle={International Workshop on Network and Operating Systems Support for Digital Audio and Video},
+  year={2008}
+}
+
+@inproceedings{scamper,
+  title={{Scamper: A Scalable and Extensible Packet Prober for Active Measurement of the Internet}},
+  author={Luckie, Matthew},
+  booktitle={IMC},
+  year={2010}
+}
+
+@inproceedings{rackcc,
+author = {Zhuo, Danyang and Zhang, Qiao and Liu, Vincent and Krishnamurthy, Arvind and Anderson, Thomas},
+title = {{Rack-Level Congestion Control}},
+year = {2016},
+booktitle = {HotNets},
 }
