--- a/abstract.tex
+++ b/abstract.tex
@@ -1,14 +1,20 @@
 \begin{abstract}
-Queues represent scheduling power: where queues build, operators can enforce scheduling policy by reordering or rate-limiting packets.
-In the Internet today, however, there is a mismatch between where queues build and where scheduling policy is most effectively enforced; while queues build at bottleneck links in the middle of the network, domains at the edge have the most visibility to specify scheduling policy for their traffic.
-To resolve this mismatch, we propose a new kind of middlebox, called \name.
-\name sits at the edge of a sender's domain and \emph{bundles} together groups of flows that share a common destination domain. 
-It does rate control for each bundle, such that the queuing induced by its traffic is moved from the bottleneck (wherever it might be in the network) to \name itself. 
-This allows the sender to enforce its desired scheduling policy across the bundled traffic. 
-\name has an immediately deployable, light-weight design, which we implement in only $\sim1500$ lines of code. 
-Our evaluation, on real Internet paths and on a variety of emulated scenarios, shows that in common cases
-\name 
+Queues allow network operators to control traffic: where queues build, they can enforce scheduling and shaping policies.
+In the Internet today, however, there is a mismatch between where queues build and where control is most effectively enforced; queues build at bottleneck links that are often not under the control of the data sender. To resolve this mismatch, we propose a new kind of middlebox, called \name.
+\name uses a novel inner control loop between a {\em sendbox} (in the sender's site) and a {\em receivebox} (in the receiver's site) to determine the aggregate rate for the bundle, leaving the end-to-end connections and their control loops intact. Enforcing this sending rate ensures that bottleneck queues that would have built up from the bundle's packets now shift from the bottleneck to the {\em \inbox}. The sendbox then exercises control over its traffic by scheduling packets to achieve higher-level objectives. We have implemented \name in Linux and evaluated it with real-world and emulation experiments. We find that it improves median flow completion time by between 28\% and 97\% across various scenarios.
+
+%The inner control loop determines the aggregate rate for the bundle; the sendbox then allocates this rate to various queues to achieve various objectives (e.g., minimizing flow completion time).
+
+%By controlling the aggregate rate of each bundle, \name moves the queues from the bottleneck to a {\em \inbox} at the edge of the network, where the source can exercise control. 
+
+%It performs rate control for each bundle to shift the queues to the edge 
+
+%, such that the queuing induced by its traffic is moved from the bottleneck (wherever it might be in the network) to \name itself. 
+%This allows the sender to enforce its desired scheduling policy across the bundled traffic. 
+%\name has an immediately deployable, lightweight design, which we implement in only $1500$ lines of code. 
+%Our evaluation, on real Internet paths and on a variety of emulated scenarios, shows that in common cases
+%\name 
 %trades a 12\% lower aggregate rate in rare scenarios with aggressive cross traffic for 
-achieves 28-97\% better performance than today's status quo.
+%achieves 28-97\% better performance than today's status quo.
 %Our evaluation, on real Internet paths and on a variety of emulated scenarios, shows that, \name achieves 28\% lower median normalized flow completion time than the status quo scenario (with queueing in the middle of the network). \radhika{the number 33\% seems too definitive for a `variety of scenarios'. i recall that `upto' sounds weasly :) can we instead report a range?} \an{agreed, this was placeholder waiting for the eval}
 \end{abstract}
